# nexus-bot

./: .gitignore  logfile_rede.pcapng
analysis/: protocol-notes.md
bot/: main.py
decompilar/: APIUtilclass.py  aaclass.py  abclass.py  acclass.py  aclass.py  adclass.py  aeclass.py  afclass.py  agclass.py  ahclass.py  aiclass.py  ajclass.py  akclass.py  alclass.py  amclass.py  aoclass.py  apclass.py  aqclass.py  arclass.py  asclass.py  atclass.py  auclass.py  avclass.py  awclass.py  axclass.py  azclass.py  bbclass.py  bcclass.py  bclass.py  (+291 more)
tibiame_bot-master/tibiame_bot-master/: .coverage  README.md  pyproject.toml
tibiame_bot-master/tibiame_bot-master/src/: main.py
tibiame_bot-master/tibiame_bot-master/src/clients/: dummy_client.py
tibiame_bot-master/tibiame_bot-master/src/core/dispatcher/: dispatcher.py
tibiame_bot-master/tibiame_bot-master/src/core/excepts/: __init__.py  protocol_error.py  session_errors.py  transport_errors.py
tibiame_bot-master/tibiame_bot-master/src/core/handlers/: base_handler.py  handler_meta.py  handler_registry.py
tibiame_bot-master/tibiame_bot-master/src/core/handlers/login/: __init__.py  login_error_handler.py  login_success_handler.py  request_login.py  ui_info_handler.py
tibiame_bot-master/tibiame_bot-master/src/core/handlers/ui_pack/: __init__.py  receive_pack_list.py
tibiame_bot-master/tibiame_bot-master/src/core/infrastructure/interface/: __init__.py  transport.py
tibiame_bot-master/tibiame_bot-master/src/core/infrastructure/transport/: tcp_transport.py
tibiame_bot-master/tibiame_bot-master/src/core/network/: session.py
tibiame_bot-master/tibiame_bot-master/src/core/packets/: client_ready_packet.py  combo_login_packet.py  handshake_packets.py  hello_packet.py  login_packet.py
tibiame_bot-master/tibiame_bot-master/src/core/pipeline/: logger_middleware.py  middleware.py  packet_pipeline.py
tibiame_bot-master/tibiame_bot-master/src/core/protocol/: __init__.py  byte_reader.py  byte_writer.py  opcode.py  packet.py  packet_factory.py  packet_meta.py  packet_registry.py  packet_types.py
tibiame_bot-master/tibiame_bot-master/src/core/stream/: packet_stream.py
tibiame_bot-master/tibiame_bot-master/tests/: test_async_stack.py  test_client_main.py  test_excepts_and_inits.py  test_handlers_dispatcher.py  test_packets.py  test_protocol.py
(+13 files in other folders)
